--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "pretty-quick": "^3.1.3"
   },
   "dependencies": {
-    "i18next-parser": "^6.0.0"
+    "i18next-parser": "^6.0.0",
+    "lodash": "https://github.com/lodash/lodash.git#4.17.9-npm"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
