--- a/src/package.json
+++ b/src/package.json
@@ -60,6 +60,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
     "tsyringe": "^4.6.0",
-    "winston": "^3.4.0"
+    "winston": "^3.4.0",
+    "lodash": "^4.17.21"
   }
 }
