--- a/web/package.json
+++ b/web/package.json
@@ -17,8 +17,8 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^16.4.0",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/styled-components": "^5.1.25",
     "copy-to-clipboard": "^3.3.2",
     "css-loader": "^6.7.1",
@@ -29,12 +29,12 @@
     "i18next": "^21.6.6",
     "jotai": "^1.6.0",
     "notistack": "^2.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-fivem-hooks": "^1.0.1-2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-fivem-hooks": "^1.0.4",
     "react-hook-form": "^7.29.0",
     "react-i18next": "^11.16.2",
-    "react-router-dom": "5.3.0",
+    "react-router": "^7.1.5",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.5",
     "tsconfig-paths-jest": "^0.0.1",
@@ -82,7 +82,7 @@
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.3.4",
     "@testing-library/react-hooks": "^7.0.2",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/react-router": "^5.1.20",
     "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
