feat(web): migrate to motion/react

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -11,6 +11,7 @@
     "types": ["@citizenfx/client", "@types/node"],
     "esModuleInterop": true,
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "paths": {
       "@typings/*": ["../../typings/*"],
       "@locales/*": ["../../locales/*"]
