--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -7,6 +7,7 @@
     "lib": ["es2018", "DOM"],
     "types": ["@citizenfx/server", "@types/node", "@types/jest"],
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "strictNullChecks": true,
