--- a/web/package.json
+++ b/web/package.json
@@ -25,7 +25,7 @@
     "dayjs": "^1.10.7",
     "emotion": "^11.0.0",
     "esbuild": "^0.14.11",
-    "framer-motion": "^6.2.8",
+    "motion": "^12.4.2",
     "i18next": "^21.6.6",
     "jotai": "^1.6.0",
     "notistack": "^2.0.3",
