--- a/src/package.json
+++ b/src/package.json
@@ -4,19 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "setup": "yarn install",
-    "dev": "yarn concurrently \"yarn nodemon\" \"node ./scripts/watch_server.js\"",
-    "dev:ingame": "yarn build:ingame && yarn concurrently \"node ./scripts/watch_client.js\" \"node ./scripts/watch_server.js --mode=ingame\"",
-    "dev:mobile": "yarn dev",
+    "setup": "bun install",
+    "dev": "bun concurrently \"bun nodemon\" \"node ./scripts/watch_server.js\"",
+    "dev:ingame": "bun build:ingame && bun concurrently \"node ./scripts/watch_client.js\" \"node ./scripts/watch_server.js --mode=ingame\"",
+    "dev:mobile": "bun dev",
     "build": "node ./scripts/build_server.js && node ./scripts/build_client.js",
     "build:ingame": "node ./scripts/build_server.js && node ./scripts/build_client.js",
     "lint": "eslint server && eslint client",
-    "watch": "concurrently \"yarn watch:server\" \"yarn watch:client\"",
+    "watch": "concurrently \"bun watch:server\" \"bun watch:client\"",
     "watch:client": "esbuild client/client.ts --bundle --target=es6 --watch --outfile=dist/client.js",
     "watch:server": "node scripts/watch_server.js",
-    "test": "NODE_ENV=test yarn jest --silent",
-    "test:watch": "NODE_ENV=test yarn jest --watch",
-    "tsc": "yarn tsc:client && yarn tsc:server",
+    "test": "NODE_ENV=test bun jest --silent",
+    "test:watch": "NODE_ENV=test bun jest --watch",
+    "tsc": "bun tsc:client && bun tsc:server",
     "tsc:client": "tsc --project client/tsconfig.json",
     "tsc:server": "tsc --project server/tsconfig.json"
   },
