--- a/web/package.json
+++ b/web/package.json
@@ -44,16 +44,16 @@
     "webpack": "^5.70.0"
   },
   "scripts": {
-    "setup": "yarn install",
-    "dev:mf": "concurrently \"yarn build:watch --mode dev\" \"pnpm preview:dev\"",
+    "setup": "bun install",
+    "dev:mf": "concurrently \"bun build:watch --mode dev\" \"bun preview:dev\"",
     "dev": "vite",
-    "dev:ingame": "yarn webpack-dev-server",
-    "dev:mobile": "yarn webpack-dev-server --config webpack.mobile.config.js",
+    "dev:ingame": "bun webpack-dev-server",
+    "dev:mobile": "bun webpack-dev-server --config webpack.mobile.config.js",
     "build": "vite build",
     "build:watch": "vite build --watch",
     "preview:dev": "vite preview --mode dev",
-    "start": "yarn webpack",
-    "start:game": "cross-env IN_GAME_DEV=1 yarn dev",
+    "start": "bun webpack",
+    "start:game": "cross-env IN_GAME_DEV=1 bun dev",
     "build:esbuild": "node scripts/build_ui.js",
     "eject": "react-scripts eject",
     "test": "jest --silent",
