--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -18,11 +18,11 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.ref }}
 
-      - name: Setup Node and Yarn Cache
+      - name: Setup Node and Bun Cache
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-          cache: 'yarn'
+          cache: 'bun'
 
       - name: Get variables
         id: get_vars
@@ -32,27 +32,27 @@ jobs:
           echo "::set-output name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/})"
 
       - name: Install main deps
-        run: yarn --frozen-lockfile
+        run: bun install --frozen-lockfile
 
       - name: Translations
         env:
           LOCALAZY_READ_KEY: ${{ secrets.LOCALAZY_READ_KEY }}
           LOCALAZY_WRITE_KEY: ${{ secrets.LOCALAZY_WRITE_KEY }}
         run: |
-          yarn translations:pull
+          bun translations:pull
 
       - name: Install src deps
         working-directory: src
-        run: yarn --frozen-lockfile
+        run: bun install --frozen-lockfile
 
       - name: Install web deps
         working-directory: web
-        run: yarn --frozen-lockfile
+        run: bun install --frozen-lockfile
 
       - name: Create pre-release
         run: |
           chmod +x "./scripts/prerelease.sh"
-          yarn pre-release
+          bun pre-release
 
       - name: Create Release & Changelog
         uses: 'marvinpinto/action-automatic-releases@v1.2.1'
