--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -12,21 +12,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-      - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          cache: 'bun'
       - name: Install deps (Translations)
-        run: yarn --frozen-lockfile
+        run: bun install --frozen-lockfile
       - name: Generate translations
         working-directory: .
         env:
           LOCALAZY_WRITE_KEY: ${{ secrets.LOCALAZY_WRITE_KEY }}
           LOCALAZY_READ_KEY: ${{ secrets.LOCALAZY_READ_KEY }}
-        run: yarn translations:generate && yarn translations:push
+        run: bun translations:generate && bun translations:push
