--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -19,27 +19,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-      - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          cache: 'bun'
       - name: Install deps (Translations)
         working-directory: .
-        run: yarn --frozen-lockfile
+        run: bun install --frozen-lockfile
       - name: Generate translations
         working-directory: .
         run: |
-          yarn translations:generate
-          yarn translations:generate-index
+          bun translations:generate
+          bun translations:generate-index
       - name: Install deps
-        run: yarn --frozen-lockfile
+        run: bun install --frozen-lockfile
       - name: Linting
-        run: yarn lint
+        run: bun lint
       - name: Type checking
-        run: yarn tsc
+        run: bun tsc
